Adding icons and iframe logic.

--- a/chrome/styles/style.css
+++ b/chrome/styles/style.css
@@ -90,7 +90,10 @@ header h1 {
     padding-right: 3px;
 }
 
-.errors_container .origin {}
+.errors_container .origin {
+    /* keep inline with the error name */
+    display: inline;
+}
 
 .errors_container .type,
 .errors_container .origin {
