--- a/chrome/styles/style.css
+++ b/chrome/styles/style.css
@@ -4,10 +4,13 @@
 
 body {
     min-width: 400px;
+    overflow: hidden;
     margin: 0;
     font-family: helvetica;
     line-height: 1.5;
     color: #333;
+
+    transition: height ease 0.2s;
 }
 
 
@@ -87,7 +90,7 @@ header h1 {
 .errors_container ul li {
     width: 100%;
     border-bottom: 1px solid #efefef;
-    padding: 2px 25px 2px 15px;
+    padding: 2px 25px 2px 30px;
     margin-top: 5px;
     cursor: default;
 }
@@ -107,11 +110,16 @@ header h1 {
 }
 
 .errors_container .occurance {
-    display:block;
+    display: block;
+    color: #bdbdbd;
     font-style: oblique;
-    font-size: 12px;
-    line-height: 2;
-    padding-right: 3px;
+    font-size: 11px;
+    line-height: 1.9;
+    letter-spacing: 1px;
+    margin-left: -26px;
+    float: left;
+    width: 20px;
+    text-align: center;
 }
 
 .errors_container .origin {
@@ -136,8 +144,11 @@ header h1 {
     white-space: nowrap;
 }
 
-.errors_container .call_stack_content .stack_item {
+.errors_container .call_stack_content.show_stack .stack_item {
     display: block;
+}
+.errors_container .call_stack_content .stack_item {
+    display: none;
     padding-left: 15px;
 }
 
@@ -149,3 +160,34 @@ header h1 {
 .call_stack_content a:hover {
     text-decoration: none;
 }
+
+/* arrow magic */
+.arrow {
+    width: 10px;
+    height: 6px;
+    margin-left: -13px;
+    margin-right: 4px;
+    
+    transition: transform ease 0.2s;
+    transform-origin: 2px 5px;
+}
+.toggle_stack .arrow {
+    border-top: 5px solid rgba(0, 0, 0, 0);
+    border-bottom: 5px solid rgba(0, 0, 0, 0);
+    border-left: 5px solid #bdbdbd;
+    border-right: 0;
+    cursor: pointer;
+}
+
+.show_stack .arrow {
+    /*border-top: 5px solid #bdbdbd;
+    border-bottom: 0;
+    border-left: 5px solid rgba(0, 0, 0, 0);
+    border-right: 5px solid rgba(0, 0, 0, 0);*/
+
+    /*margin-left: -12px;
+    margin-right: 4px;*/
+
+    transform: rotate(90deg);
+}
+
